<resources>
    <string name="app_name">Interval Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="startWorkout">Start</string>
    <string name="workoutFinishedText">Done!</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.
    </string>
    <string name="initial_time">20:00</string>
    <string name="timer_finish">Done</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_timer_fragment">Add Timer</string>
    <string name="hint_number_sets">E.g. 3</string>

    <string name="warm_up">Warm-up</string>
    <string name="warm_up_initial_value">00:10</string>
    <string name="workout">Workout</string>
    <string name="workout_initial_value">01:00</string>
    <string name="break_string">Break</string>
    <string name="break_initial_value">00:30</string>
    <string name="sets">Sets</string>
    <string name="cancel">Cancel</string>
    <string name="sets_initial_value">3</string>
    <string name="confirm">Confirm</string>
</resources>