<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvCreateWorkoutHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_workout_fragment_heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayoutChild"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCreateWorkoutHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonConfirm">


        <TextView
            android:id="@+id/tfWoDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/workout_duration"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@id/etWoDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etWoDuration"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:inputType="time"
            android:text="@string/warm_up_initial_value"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@id/tfBreakDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfWoDuration" />

        <TextView
            android:id="@+id/tfBreakDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/workout_duration"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@id/etBreakDuration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etWoDuration" />

        <EditText
            android:id="@+id/etBreakDuration"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:inputType="time"
            android:text="@string/workout_initial_value"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@id/tvNumSets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfBreakDuration" />

        <TextView
            android:id="@+id/tvNumSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sets"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@id/etNumSets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBreakDuration" />

        <EditText
            android:id="@+id/etNumSets"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="3"
            android:hint="@string/hint_number_sets"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/sets_initial_value"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNumSets" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/warm_yellow"
        android:text="@string/confirm"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutChild" />


</androidx.constraintlayout.widget.ConstraintLayout>